[gd_scene load_steps=8 format=3 uid="uid://b3qfehguf750m"]

[ext_resource type="Texture2D" uid="uid://vbdyx5j6rjpn" path="res://Icons/CircleCancel.svg" id="1_qrutp"]
[ext_resource type="Script" path="res://Scenes/Common/Buttons/Scripts/settings_managed_texture_button.gd" id="2_jclse"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yd04i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fx87x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fkwqo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0jnx8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_370ur"]

[node name="SettingsManagedTextureButton" type="Button"]
custom_minimum_size = Vector2(75, 75)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -37.5
offset_right = 37.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxEmpty_yd04i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_fx87x")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fkwqo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0jnx8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_370ur")
script = ExtResource("2_jclse")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("1_qrutp")
expand_mode = 1
stretch_mode = 5

[node name="LongPressTimer" type="Timer" parent="."]

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="timeout" from="LongPressTimer" to="." method="_on_long_press_timer_timeout"]
